--- a/.eslintrc
+++ b/.eslintrc
@@ -2,5 +2,8 @@
     "root": true,
     "parser": "@typescript-eslint/parser",
     "extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended", "prettier"],
-    "plugins": ["@typescript-eslint"]
+    "plugins": ["@typescript-eslint"],
+    "rules": {
+        "@typescript-eslint/no-explicit-any": "off"
+    }
 }
