--- a/.eslintrc
+++ b/.eslintrc
@@ -1,9 +1,15 @@
 {
-    "root": true,
-    "parser": "@typescript-eslint/parser",
-    "extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended", "prettier"],
-    "plugins": ["@typescript-eslint"],
-    "rules": {
-        "@typescript-eslint/no-explicit-any": "off"
-    }
+  "root": true,
+  "parser": "@typescript-eslint/parser",
+  "extends": [
+    "eslint:recommended",
+    "plugin:@typescript-eslint/recommended",
+    "prettier"
+  ],
+  "plugins": [
+    "@typescript-eslint"
+  ],
+  "rules": {
+    "@typescript-eslint/no-explicit-any": "off"
+  }
 }
