--- a/tools/superset/typescript/config.json
+++ b/tools/superset/typescript/config.json
@@ -6,7 +6,10 @@
     "checkJs": true,
     "jsx": "preserve",
     "outDir": "./dist",
-    "rootDir": "./src",
+    "rootDirs": [
+      "./src",
+      "./tools"
+    ],
     "strict": false,
     "baseUrl": "./src",
     "esModuleInterop": true,
