adicionei comando de configuração

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
       "./tools"
     ],
     "strict": false,
-    "baseUrl": "./src",
+    "baseUrl": ".",
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true
