--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@typescript-eslint/parser": "^4.28.4",
     "eslint": "^7.31.0",
     "eslint-config-prettier": "^8.3.0",
+    "instrumentajs": "^0.0.1",
     "prettier": "^2.3.2",
     "typescript": "^4.3.5"
   },
