--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.8",
   "description": "",
   "main": "dist/index.js",
-  "bin": "dist/cli.js",
+  "bin": "scripts/run-cli.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "prepare": "husky install"
@@ -21,7 +21,7 @@
   "homepage": "https://github.com/dodiego/instrumentajs#readme",
   "devDependencies": {
     "@types/inquirer": "^7.3.3",
-    "@types/node": "^16.4.0",
+    "@types/node": "^16.4.2",
     "@typescript-eslint/eslint-plugin": "^4.28.4",
     "@typescript-eslint/parser": "^4.28.4",
     "eslint": "^7.31.0",
