--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "instrumentajs",
-  "version": "0.0.12",
+  "version": "0.0.8",
   "description": "",
   "main": "dist/index.js",
-  "bin": "scripts/run-cli.js",
+  "bin": {
+    "instrumenta": "scripts/run-cli.js"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "cli": "tsc && cross-env NODE_PATH=./dist node dist/src/cli.js"
   },
   "repository": {
     "type": "git",
@@ -32,6 +35,7 @@
     "typescript": "^4.3.5"
   },
   "dependencies": {
-    "commander": "^8.0.0"
+    "commander": "^8.0.0",
+    "cross-env": "^7.0.3"
   }
 }
