--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "prepare": "husky install",
-    "cli": "tsc && node bin/instrumenta"
+    "typescript-file": "cross-env NODE_PATH=. node -r ts-node/register",
+    "cli": "npm run typescript-file src/cli.ts"
   },
   "repository": {
     "type": "git",
@@ -27,15 +28,16 @@
     "@types/node": "^16.4.2",
     "@typescript-eslint/eslint-plugin": "^4.28.4",
     "@typescript-eslint/parser": "^4.28.4",
+    "cross-env": "^7.0.3",
     "eslint": "^7.31.0",
     "eslint-config-prettier": "^8.3.0",
     "husky": "^7.0.1",
-    "instrumentajs": "^0.0.3",
+    "instrumentajs": "^0.0.15",
     "prettier": "^2.3.2",
     "typescript": "^4.3.5"
   },
   "dependencies": {
     "commander": "^8.0.0",
-    "cross-env": "^7.0.3"
+    "ts-node": "^10.1.0"
   }
 }
