--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "prepare": "husky install",
-    "typescript-file": "cross-env NODE_PATH=. node -r ts-node/register",
-    "cli": "npm run typescript-file src/cli.ts"
+    "cli": "npx tsc && npx cross-env NODE_PATH=. node dist/src/cli.js"
   },
   "repository": {
     "type": "git",
