--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,14 @@
 {
   "compilerOptions": {
     "resolveJsonModule": true,
+    "moduleResolution": "node",
     "target": "ES2020",
     "module": "commonjs",
     "allowJs": true,
     "checkJs": true,
     "jsx": "preserve",
     "outDir": "./dist",
-    "rootDirs": [
-      "./src",
-      "./tools"
-    ],
+    "rootDirs": ["./src", "./tools"],
     "strict": false,
     "baseUrl": ".",
     "esModuleInterop": true,
